src/styles/globals.css
:root {
  /* spacing */
  --space-x: 16px;
  --space-x-half: calc(var(--space-x) * 0.5);
  --space-x-double: calc(var(--space-x) * 2);
  --space-x-lg: 2rem;
  --space-y: 16px;
  --space-y-quarter: calc(var(--space-y) * 0.25);
  --space-y-half: calc(var(--space-y) * 0.5);
  --space-y-double: calc(var(--space-y) * 2);
  --space-y-lg: 2.5rem;
  --space-y-trio: calc(var(--space-y) * 3);
  --space-y-quad: calc(var(--space-y) * 4);

  --space-menu-sm: 52px;
  --space-menu: 3.625rem;
  --space-full-menu: calc(var(--space-menu) + var(--space-x));
  --space-page: 88px;

  --space-block: 56px;

  /* container wrap sizes */
  --wrap: 1248px;
  --wrap-2xs: 400px;
  --wrap-xs: 640px;
  --wrap-sm: calc(var(--wrap-xs) + var(--space-x-double) * 2);

  /* forms */
  --input-size: 2.5em;

  /* buttons */
  --btn-height: 48px;
  --btn-width: calc(100% - var(--space-menu));
  --btn-space-x: 2em;
  --btn-space-y: 0.625em;

  /* header height */
  --header-height: 68px;
  --gradient-height: 96px;

  /* speeds */
  --speed-fast: 0.2s;
  --speed-normal: 0.3s;
  --speed-slow: 0.5s;
  --speed-xslow: 0.8s;
  --speed-snail: 1.25s;
  --speed-block: var(--speed-slow);
}

@screen md {
  :root {
    --space-block: 150px;
    --btn-width: 358px;

    --header-height: 80px;
    --gradient-height: 90px;

    --space-menu-sm: 59px;
    --space-menu: 171px;
    --space-full-menu: 12rem;
    --space-page: var(--header-height);
  }
}

@font-face {
  font-family: 'Haas Grot';
  src: url('../../public/fonts/haas-grot/NeueHaasGrotText-55Roman.woff2')
    format('woff2');
  font-display: swap;
}

@font-face {
  font-family: 'Haas Grot';
  font-style: italic;
  src: url('../../public/fonts/haas-grot/NeueHaasGrotText-56Italic.woff2')
    format('woff2');
  font-display: swap;
}

@font-face {
  font-family: 'Haas Grot';
  font-weight: 500;
  src: url('../../public/fonts/haas-grot/NeueHaasGrotText-65Medium.woff2')
    format('woff2');
  font-display: swap;
}

@font-face {
  font-family: 'Haas Grot';
  font-style: italic;
  font-weight: 500;
  src: url('../../public/fonts/haas-grot/NeueHaasGrotText-66MediumItalic.woff2')
    format('woff2');
  font-display: swap;
}

@font-face {
  font-family: 'Haas Grot Display';
  font-weight: 500;
  src: url('../../public/fonts/haas-grot/HaasGrotDisp-65Medium.woff2')
    format('woff2');
  font-display: swap;
}

@font-face {
  font-family: 'Haas Grot Display';
  font-weight: bold;
  src: url('../../public/fonts/haas-grot/HaasGrotDisp-75Bold.woff2')
    format('woff2');
  font-display: swap;
}

@font-face {
  font-family: 'Haas Grot';
  font-weight: bold;
  src: url('../../public/fonts/haas-grot/NeueHaasGrotText-75Bold.woff2')
    format('woff2');
  font-display: swap;
}

@font-face {
  font-family: 'Haas Grot Text';
  font-weight: bold;
  src: url('../../public/fonts/haas-grot/NeueHaasGrotText-75Bold.woff2')
    format('woff2');
  font-display: swap;
}

/* stylelint-disable selector-id-pattern */
html,
body,
#__next {
  height: 100%;
}
/* stylelint-enable selector-id-pattern */

::selection {
  color: white;
  background: black;
}

/* Hide scrollbar for Chrome, Safari and Opera */
body::-webkit-scrollbar,
.overflow-x-scroll::-webkit-scrollbar,
div::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
body,
.overflow-x-scroll {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

body {
  background-color: theme('colors.white');
  font-family: theme('fontFamily.sans');
  font-size: theme('fontSize.base');
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  min-width: 320px;
  overscroll-behavior-y: none;
  font-feature-settings: 'cpsp' on, 'case' on;
}

header,
footer {
  font-feature-settings: 'case' on;
}

.table-border-black {
  border: 1px solid theme('colors.black');
}

.table-border-black + .table-border-black {
  border-top: 0px solid theme('colors.black');
}

/* 3rd party styling */
.chakra-portal {
  position: relative;
  z-index: theme('zIndex.modal');
}

.intercom-lightweight-app-launcher {
  right: 0.625rem !important;
}

.pswp img {
  max-width: none;
  object-fit: contain;
}

.pswp__img--placeholder {
  display: none !important;
}

.pswp--has_mouse .pswp__button--arrow {
  overflow: visible;
}

.swiper-container {
  width: 100%;
  height: 100%;
}

.calendar .swiper-wrapper {
  align-items: flex-start;
}

.swiper-slide {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  overflow: hidden;
}

.calendar .swiper-slide {
  display: block;
}

.swiper-prev,
.swiper-next {
  @apply transition-all duration-200;
}

.swiper-button-disabled {
  opacity: 0.4;
}

.swiper-pagination {
  @apply font-bold text-left mt-y tracking-tight;
  position: relative;
}

.hide-cta .cta {
  display: none;
}

.no-scroll {
  overflow: hidden;
  height: 100vh;
  position: fixed;
}

.white-gradient {
  background-image: linear-gradient(
    180deg,
    rgba(255, 255, 255, 1) 0%,
    rgba(255, 255, 255, 1) 90%,
    rgba(255, 255, 255, 0) 100%
  );
}

@media (min-width: 768px) {
  .intercom-lightweight-app-launcher {
    right: 2.5rem !important;
  }
}

